# demo_motion_demonstration

./: CMakeLists.txt  README.md  package.xml
config/: control_trajectory_execution_action_client.yaml
include/: control_trajectory_execution_action_client.h
launch/: demo_motion_demonstration.launch  demo_replication.launch
src/: control_trajectory_execution_action_client.cpp
